Bug 163448 - An unsaved new document don't allow moving headings with Content Navigation View option
Summary: An unsaved new document don't allow moving headings with Content Navigation V...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-15 18:20 UTC by BogdanB
Modified: 2024-10-16 19:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
video testing the bug (24.41 MB, video/webm)
2024-10-15 18:22 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2024-10-15 18:20:39 UTC
Description:
As a continuation for bug https://bugs.documentfoundation.org/show_bug.cgi?id=163191, I notice that in a new created and unsaved document going to Navigator and moving headings with Content Navigation View option enabled is not possible. It is possible just after the document is saved.

Steps to Reproduce:
1. Open a new Writer document, insert 2 "Headings 1" headings with some text after  each one.  
2. Open the Navigator, activate Content Navigation View option
3. Try to move the headings

Actual Results:
The headings are selected but don't move.

Expected Results:
The headings are selected and move, like when the document is saved.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Save the document and see how it should be. 
This bug can only be tested on master.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dfeefe2e97a5412a445a3a508acb2d9ae05138e5
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2024-10-15 18:22:20 UTC
Created attachment 197064 [details]
video testing the bug

This video shows 2 things: how it is working when the document is unsaved (this bug is about). And after that, how it should behave when it is saved.
Comment 2 BogdanB 2024-10-15 18:37:34 UTC
Jim, I added you here in CC.
Comment 3 Jim Raykowski 2024-10-16 04:52:14 UTC
I repro using:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e97c24f2350e5a5c5f16812ca04b1cdfc559689
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2024-10-16 18:58:51 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5cf912b08e4a22f66ab1ec5fa601ba3e50e3c4cc

Resolves: tdf#163448 An unsaved new document don't allow moving

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2024-10-16 19:41:55 UTC
Thanks, Jim, working also in unsaved documents!

Verified with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cf912b08e4a22f66ab1ec5fa601ba3e50e3c4cc
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Jim Raykowski 2024-10-16 19:55:48 UTC
Thanks BogdanB for spotting the bug, reporting it, and testing the fix!