Resolves: tdf#163448 An unsaved new document don't allow moving

headings with Content Navigation View option (by drag and drop)

Change-Id: Id1f4cbc0538e75abfb2a133d2d6fb82ddaf580fb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174986
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Tested-by: Jenkins